--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "next": "13.4.13",
+    "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
     "postcss": "8.4.27",
     "react": "18.2.0",
