--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@types/nprogress": "^0.2.0"
+    "@types/nprogress": "^0.2.0",
+    "prettier": "^3.0.2",
+    "prettier-plugin-tailwindcss": "^0.5.3"
   }
 }
